Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -44,5 +44,6 @@
   "dhp230:2": "kad je nalik čistome zlatu? ",
   "dhp230:3": "Bogovi takvoga hvale, ",
   "dhp230:4": "hvali ga čak i moćni Brama! ",
-  "dhp231:1": "Čuvaj se nasilnih dela, "
+  "dhp231:1": "Čuvaj se nasilnih dela, ",
+  "dhp231:2": "sopstveno telo obuzdaj; "
 }
