--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dhp230:3": "Bogovi takvoga hvale, ",
   "dhp230:4": "hvali ga čak i moćni Brama! ",
   "dhp231:1": "Čuvaj se nasilnih dela, ",
-  "dhp231:2": "sopstveno telo obuzdaj; "
+  "dhp231:2": "sopstveno telo obuzdaj; ",
+  "dhp231:3": "loše postupke telom napustivši, "
 }
