Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -46,5 +46,6 @@
   "dhp230:4": "hvali ga čak i moćni Brama! ",
   "dhp231:1": "Čuvaj se nasilnih dela, ",
   "dhp231:2": "sopstveno telo obuzdaj; ",
-  "dhp231:3": "loše postupke telom napustivši, "
+  "dhp231:3": "loše postupke telom napustivši, ",
+  "dhp231:4": "one dobre činiti treba. "
 }
