Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -47,5 +47,6 @@
   "dhp231:1": "Čuvaj se nasilnih dela, ",
   "dhp231:2": "sopstveno telo obuzdaj; ",
   "dhp231:3": "loše postupke telom napustivši, ",
-  "dhp231:4": "one dobre činiti treba. "
+  "dhp231:4": "one dobre činiti treba. ",
+  "dhp232:1": "Čuvaj se nasilnih reči, "
 }
