--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -48,5 +48,6 @@
   "dhp231:2": "sopstveno telo obuzdaj; ",
   "dhp231:3": "loše postupke telom napustivši, ",
   "dhp231:4": "one dobre činiti treba. ",
-  "dhp232:1": "Čuvaj se nasilnih reči, "
+  "dhp232:1": "Čuvaj se nasilnih reči, ",
+  "dhp232:2": "sopstveni govor obuzdaj; "
 }
