--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -49,5 +49,6 @@
   "dhp231:3": "loše postupke telom napustivši, ",
   "dhp231:4": "one dobre činiti treba. ",
   "dhp232:1": "Čuvaj se nasilnih reči, ",
-  "dhp232:2": "sopstveni govor obuzdaj; "
+  "dhp232:2": "sopstveni govor obuzdaj; ",
+  "dhp232:3": "loše postupke rečju napustivši, "
 }
