Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -50,5 +50,6 @@
   "dhp231:4": "one dobre činiti treba. ",
   "dhp232:1": "Čuvaj se nasilnih reči, ",
   "dhp232:2": "sopstveni govor obuzdaj; ",
-  "dhp232:3": "loše postupke rečju napustivši, "
+  "dhp232:3": "loše postupke rečju napustivši, ",
+  "dhp232:4": "one dobre činiti treba. "
 }
