--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -52,5 +52,6 @@
   "dhp232:2": "sopstveni govor obuzdaj; ",
   "dhp232:3": "loše postupke rečju napustivši, ",
   "dhp232:4": "one dobre činiti treba. ",
-  "dhp233:1": "Čuvaj se nasilnih misli, "
+  "dhp233:1": "Čuvaj se nasilnih misli, ",
+  "dhp233:2": "sopstveni um obuzdaj; "
 }
