--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -53,5 +53,6 @@
   "dhp232:3": "loše postupke rečju napustivši, ",
   "dhp232:4": "one dobre činiti treba. ",
   "dhp233:1": "Čuvaj se nasilnih misli, ",
-  "dhp233:2": "sopstveni um obuzdaj; "
+  "dhp233:2": "sopstveni um obuzdaj; ",
+  "dhp233:3": "loše postupke mišlju napustivši, "
 }
