Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -54,5 +54,6 @@
   "dhp232:4": "one dobre činiti treba. ",
   "dhp233:1": "Čuvaj se nasilnih misli, ",
   "dhp233:2": "sopstveni um obuzdaj; ",
-  "dhp233:3": "loše postupke mišlju napustivši, "
+  "dhp233:3": "loše postupke mišlju napustivši, ",
+  "dhp233:4": "one dobre činiti treba. "
 }
