Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -56,5 +56,6 @@
   "dhp233:2": "sopstveni um obuzdaj; ",
   "dhp233:3": "loše postupke mišlju napustivši, ",
   "dhp233:4": "one dobre činiti treba. ",
-  "dhp234:1": "Tela obuzdanog mudraci, "
+  "dhp234:1": "Tela obuzdanog mudraci, ",
+  "dhp234:2": "govora obuzdanog, "
 }
