--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -57,5 +57,6 @@
   "dhp233:3": "loše postupke mišlju napustivši, ",
   "dhp233:4": "one dobre činiti treba. ",
   "dhp234:1": "Tela obuzdanog mudraci, ",
-  "dhp234:2": "govora obuzdanog, "
+  "dhp234:2": "govora obuzdanog, ",
+  "dhp234:3": "uma obuzdanog mudraci, "
 }
