Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp221-234_translation-sr-brankokovacevic.json
@@ -58,5 +58,6 @@
   "dhp233:4": "one dobre činiti treba. ",
   "dhp234:1": "Tela obuzdanog mudraci, ",
   "dhp234:2": "govora obuzdanog, ",
-  "dhp234:3": "uma obuzdanog mudraci, "
+  "dhp234:3": "uma obuzdanog mudraci, ",
+  "dhp234:4": "tek ti su zaista obuzdani. "
 }
