--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -1,3 +1,4 @@
 {
-  "dhp235:0.1": "Kratka zbirka Budnih govora "
+  "dhp235:0.1": "Kratka zbirka Budnih govora ",
+  "dhp235:0.2": "Reči mudrosti "
 }
