--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -2,5 +2,6 @@
   "dhp235:0.1": "Kratka zbirka Budnih govora ",
   "dhp235:0.2": "Reči mudrosti ",
   "dhp235:0.3": "Mane ",
-  "dhp235:1": "Nalik si uvelom listu, "
+  "dhp235:1": "Nalik si uvelom listu, ",
+  "dhp235:2": "glasnici smrti već su tu, "
 }
