Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -3,5 +3,6 @@
   "dhp235:0.2": "Reči mudrosti ",
   "dhp235:0.3": "Mane ",
   "dhp235:1": "Nalik si uvelom listu, ",
-  "dhp235:2": "glasnici smrti već su tu, "
+  "dhp235:2": "glasnici smrti već su tu, ",
+  "dhp235:3": "dug put je pred tobom, "
 }
