--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dhp235:1": "Nalik si uvelom listu, ",
   "dhp235:2": "glasnici smrti već su tu, ",
   "dhp235:3": "dug put je pred tobom, ",
-  "dhp235:4": "a ništa da poneseš nemaš. "
+  "dhp235:4": "a ništa da poneseš nemaš. ",
+  "dhp236:1": "Zato postani sam sebi oslonac! "
 }
