Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -6,5 +6,6 @@
   "dhp235:2": "glasnici smrti već su tu, ",
   "dhp235:3": "dug put je pred tobom, ",
   "dhp235:4": "a ništa da poneseš nemaš. ",
-  "dhp236:1": "Zato postani sam sebi oslonac! "
+  "dhp236:1": "Zato postani sam sebi oslonac! ",
+  "dhp236:2": "Ne štedi truda, mudar budi! "
 }
