--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -7,5 +7,6 @@
   "dhp235:3": "dug put je pred tobom, ",
   "dhp235:4": "a ništa da poneseš nemaš. ",
   "dhp236:1": "Zato postani sam sebi oslonac! ",
-  "dhp236:2": "Ne štedi truda, mudar budi! "
+  "dhp236:2": "Ne štedi truda, mudar budi! ",
+  "dhp236:3": "Bez mana i čist, "
 }
