Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -8,5 +8,6 @@
   "dhp235:4": "a ništa da poneseš nemaš. ",
   "dhp236:1": "Zato postani sam sebi oslonac! ",
   "dhp236:2": "Ne štedi truda, mudar budi! ",
-  "dhp236:3": "Bez mana i čist, "
+  "dhp236:3": "Bez mana i čist, ",
+  "dhp236:4": "na božansko mesto plemenitih stići ćeš. "
 }
