--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp236:1": "Zato postani sam sebi oslonac! ",
   "dhp236:2": "Ne štedi truda, mudar budi! ",
   "dhp236:3": "Bez mana i čist, ",
-  "dhp236:4": "na božansko mesto plemenitih stići ćeš. "
+  "dhp236:4": "na božansko mesto plemenitih stići ćeš. ",
+  "dhp237:1": "Život ti je na zalasku, "
 }
