Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp236:2": "Ne štedi truda, mudar budi! ",
   "dhp236:3": "Bez mana i čist, ",
   "dhp236:4": "na božansko mesto plemenitih stići ćeš. ",
-  "dhp237:1": "Život ti je na zalasku, "
+  "dhp237:1": "Život ti je na zalasku, ",
+  "dhp237:2": "ka bogu smrti krećeš ti, "
 }
