Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp236:4": "na božansko mesto plemenitih stići ćeš. ",
   "dhp237:1": "Život ti je na zalasku, ",
   "dhp237:2": "ka bogu smrti krećeš ti, ",
-  "dhp237:3": "na putu tome odmorišta nema, "
+  "dhp237:3": "na putu tome odmorišta nema, ",
+  "dhp237:4": "a ništa da poneseš nemaš. "
 }
