--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -14,5 +14,6 @@
   "dhp237:2": "ka bogu smrti krećeš ti, ",
   "dhp237:3": "na putu tome odmorišta nema, ",
   "dhp237:4": "a ništa da poneseš nemaš. ",
-  "dhp238:1": "Zato postani sam sebi oslonac! "
+  "dhp238:1": "Zato postani sam sebi oslonac! ",
+  "dhp238:2": "Ne štedi truda, mudar budi! "
 }
