--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp237:4": "a ništa da poneseš nemaš. ",
   "dhp238:1": "Zato postani sam sebi oslonac! ",
   "dhp238:2": "Ne štedi truda, mudar budi! ",
-  "dhp238:3": "Bez mana i čist, "
+  "dhp238:3": "Bez mana i čist, ",
+  "dhp238:4": "u krug rođenja i smrti ući ponovo nećeš. "
 }
