Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp238:1": "Zato postani sam sebi oslonac! ",
   "dhp238:2": "Ne štedi truda, mudar budi! ",
   "dhp238:3": "Bez mana i čist, ",
-  "dhp238:4": "u krug rođenja i smrti ući ponovo nećeš. "
+  "dhp238:4": "u krug rođenja i smrti ući ponovo nećeš. ",
+  "dhp239:1": "Postepeno, malo pomalo, "
 }
