--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -19,5 +19,6 @@
   "dhp238:3": "Bez mana i čist, ",
   "dhp238:4": "u krug rođenja i smrti ući ponovo nećeš. ",
   "dhp239:1": "Postepeno, malo pomalo, ",
-  "dhp239:2": "iz prilike u priliku, "
+  "dhp239:2": "iz prilike u priliku, ",
+  "dhp239:3": "mudrac sebe čisti, "
 }
