Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -20,5 +20,6 @@
   "dhp238:4": "u krug rođenja i smrti ući ponovo nećeš. ",
   "dhp239:1": "Postepeno, malo pomalo, ",
   "dhp239:2": "iz prilike u priliku, ",
-  "dhp239:3": "mudrac sebe čisti, "
+  "dhp239:3": "mudrac sebe čisti, ",
+  "dhp239:4": "k’o zlatar što srebro čisti. "
 }
