--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dhp239:1": "Postepeno, malo pomalo, ",
   "dhp239:2": "iz prilike u priliku, ",
   "dhp239:3": "mudrac sebe čisti, ",
-  "dhp239:4": "k’o zlatar što srebro čisti. "
+  "dhp239:4": "k’o zlatar što srebro čisti. ",
+  "dhp240:0": "Kao što rđa od gvožđa nastala "
 }
