--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -22,5 +22,6 @@
   "dhp239:2": "iz prilike u priliku, ",
   "dhp239:3": "mudrac sebe čisti, ",
   "dhp239:4": "k’o zlatar što srebro čisti. ",
-  "dhp240:0": "Kao što rđa od gvožđa nastala "
+  "dhp240:0": "Kao što rđa od gvožđa nastala ",
+  "dhp240:1": "izjeda samo to gvožđe, "
 }
