--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -23,5 +23,5 @@
   "dhp239:3": "mudrac sebe čisti, ",
   "dhp239:4": "k’o zlatar što srebro čisti. ",
   "dhp240:0": "Kao što rđa od gvožđa nastala ",
-  "dhp240:1": "izjeda samo to gvožđe, "
+  "dhp240:1": ""
 }
