--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -24,5 +24,6 @@
   "dhp239:4": "k’o zlatar što srebro čisti. ",
   "dhp240:0": "",
   "dhp240:1": "Kao što rđa od gvožđa nastala ",
-  "dhp240:2": "izjeda samo to gvožđe, "
+  "dhp240:2": "izjeda samo to gvožđe, ",
+  "dhp240:3": "isto tako i neumerenoga "
 }
