Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp240:0": "",
   "dhp240:1": "Kao što rđa od gvožđa nastala ",
   "dhp240:2": "izjeda samo to gvožđe, ",
-  "dhp240:3": "isto tako i neumerenoga "
+  "dhp240:3": "isto tako i neumerenoga ",
+  "dhp240:4": "sopstvena dela do propasti dovode. "
 }
