--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dhp240:2": "izjeda samo to gvožđe, ",
   "dhp240:3": "isto tako i neumerenoga ",
   "dhp240:4": "sopstvena dela do propasti dovode. ",
-  "dhp241:1": "Nerecitovanje je mrlja na Učenju, "
+  "dhp241:1": "Nerecitovanje je mrlja na Učenju, ",
+  "dhp241:2": "lenjost je mrlja na domaćinu, "
 }
