Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -29,5 +29,6 @@
   "dhp240:4": "sopstvena dela do propasti dovode. ",
   "dhp241:1": "Nerecitovanje je mrlja na Učenju, ",
   "dhp241:2": "lenjost je mrlja na domaćinu, ",
-  "dhp241:3": "zapuštenost je mrlja na lepoti, "
+  "dhp241:3": "zapuštenost je mrlja na lepoti, ",
+  "dhp241:4": "a nepažnja na onom ko sebe čuva. "
 }
