Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -30,5 +30,6 @@
   "dhp241:1": "Nerecitovanje je mrlja na Učenju, ",
   "dhp241:2": "lenjost je mrlja na domaćinu, ",
   "dhp241:3": "zapuštenost je mrlja na lepoti, ",
-  "dhp241:4": "a nepažnja na onom ko sebe čuva. "
+  "dhp241:4": "a nepažnja na onom ko sebe čuva. ",
+  "dhp242:1": "Neverstvo je mana žene, "
 }
