Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -33,5 +33,6 @@
   "dhp241:4": "a nepažnja na onom ko sebe čuva. ",
   "dhp242:1": "Neverstvo je mana žene, ",
   "dhp242:2": "a tvrdičluk darovatelja, ",
-  "dhp242:3": "loša dela mana su u svetu ovom, "
+  "dhp242:3": "loša dela mana su u svetu ovom, ",
+  "dhp242:4": "tako i u drugom. "
 }
