Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -35,5 +35,6 @@
   "dhp242:2": "a tvrdičluk darovatelja, ",
   "dhp242:3": "loša dela mana su u svetu ovom, ",
   "dhp242:4": "tako i u drugom. ",
-  "dhp243:1": "Ali neznanje najveća je mana, "
+  "dhp243:1": "Ali neznanje najveća je mana, ",
+  "dhp243:2": "veća od bilo koje druge. "
 }
