--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dhp242:3": "loša dela mana su u svetu ovom, ",
   "dhp242:4": "tako i u drugom. ",
   "dhp243:1": "Ali neznanje najveća je mana, ",
-  "dhp243:2": "veća od bilo koje druge. "
+  "dhp243:2": "veća od bilo koje druge. ",
+  "dhp243:3": "Napustivši je, "
 }
