Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -38,5 +38,6 @@
   "dhp243:1": "Ali neznanje najveća je mana, ",
   "dhp243:2": "veća od bilo koje druge. ",
   "dhp243:3": "Napustivši je, ",
-  "dhp243:4": "budite bez mana, o monasi! "
+  "dhp243:4": "budite bez mana, o monasi! ",
+  "dhp244:1": "Lak je život besramnome, "
 }
