--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -39,5 +39,6 @@
   "dhp243:2": "veća od bilo koje druge. ",
   "dhp243:3": "Napustivši je, ",
   "dhp243:4": "budite bez mana, o monasi! ",
-  "dhp244:1": "Lak je život besramnome, "
+  "dhp244:1": "Lak je život besramnome, ",
+  "dhp244:2": "poput gavrana drskome, "
 }
