Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp243:3": "Napustivši je, ",
   "dhp243:4": "budite bez mana, o monasi! ",
   "dhp244:1": "Lak je život besramnome, ",
-  "dhp244:2": "poput gavrana drskome, "
+  "dhp244:2": "poput gavrana drskome, ",
+  "dhp244:3": "onom ko vređa druge, "
 }
