Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -41,5 +41,6 @@
   "dhp243:4": "budite bez mana, o monasi! ",
   "dhp244:1": "Lak je život besramnome, ",
   "dhp244:2": "poput gavrana drskome, ",
-  "dhp244:3": "onom ko vređa druge, "
+  "dhp244:3": "onom ko vređa druge, ",
+  "dhp244:4": "razmetljivom i bezobzirnom. "
 }
