Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp244:1": "Lak je život besramnome, ",
   "dhp244:2": "poput gavrana drskome, ",
   "dhp244:3": "onom ko vređa druge, ",
-  "dhp244:4": "razmetljivom i bezobzirnom. "
+  "dhp244:4": "razmetljivom i bezobzirnom. ",
+  "dhp245:1": "Težak je život onom sa savešću, "
 }
