Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -44,5 +44,6 @@
   "dhp244:3": "onom ko vređa druge, ",
   "dhp244:4": "razmetljivom i bezobzirnom. ",
   "dhp245:1": "Težak je život onom sa savešću, ",
-  "dhp245:2": "ko uvek ka čistoti teži, "
+  "dhp245:2": "ko uvek ka čistoti teži, ",
+  "dhp245:3": "iskrenom i obazrivome, "
 }
