--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -45,5 +45,6 @@
   "dhp244:4": "razmetljivom i bezobzirnom. ",
   "dhp245:1": "Težak je život onom sa savešću, ",
   "dhp245:2": "ko uvek ka čistoti teži, ",
-  "dhp245:3": "iskrenom i obazrivome, "
+  "dhp245:3": "iskrenom i obazrivome, ",
+  "dhp245:4": "ko živi čisto, motreći Istinu. "
 }
