--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -47,5 +47,6 @@
   "dhp245:2": "ko uvek ka čistoti teži, ",
   "dhp245:3": "iskrenom i obazrivome, ",
   "dhp245:4": "ko živi čisto, motreći Istinu. ",
-  "dhp246:1": "Onaj ko druga bića ubija, "
+  "dhp246:1": "Onaj ko druga bića ubija, ",
+  "dhp246:2": "govori laži, "
 }
