Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -48,5 +48,6 @@
   "dhp245:3": "iskrenom i obazrivome, ",
   "dhp245:4": "ko živi čisto, motreći Istinu. ",
   "dhp246:1": "Onaj ko druga bića ubija, ",
-  "dhp246:2": "govori laži, "
+  "dhp246:2": "govori laži, ",
+  "dhp246:3": "uzima što mu nije dato "
 }
