Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -50,5 +50,6 @@
   "dhp246:1": "Onaj ko druga bića ubija, ",
   "dhp246:2": "govori laži, ",
   "dhp246:3": "uzima što mu nije dato ",
-  "dhp246:4": "i u preljubu srlja, "
+  "dhp246:4": "i u preljubu srlja, ",
+  "dhp247:1": "ko alkohol pije, "
 }
