Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -51,5 +51,6 @@
   "dhp246:2": "govori laži, ",
   "dhp246:3": "uzima što mu nije dato ",
   "dhp246:4": "i u preljubu srlja, ",
-  "dhp247:1": "ko alkohol pije, "
+  "dhp247:1": "ko alkohol pije, ",
+  "dhp247:2": "čovek koji takve stvari radi "
 }
