Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -55,5 +55,6 @@
   "dhp247:2": "čovek koji takve stvari radi ",
   "dhp247:3": "već u ovom životu ",
   "dhp247:4": "sopstveni koren seče. ",
-  "dhp248:1": "Ovako znaj, o čoveče, "
+  "dhp248:1": "Ovako znaj, o čoveče, ",
+  "dhp248:2": "teško je lošem se odupreti. "
 }
