--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -57,5 +57,6 @@
   "dhp247:4": "sopstveni koren seče. ",
   "dhp248:1": "Ovako znaj, o čoveče, ",
   "dhp248:2": "teško je lošem se odupreti. ",
-  "dhp248:3": "Neka te pohlepa i neznanje "
+  "dhp248:3": "Neka te pohlepa i neznanje ",
+  "dhp248:4": "ne pobede još zadugo. "
 }
