Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -58,5 +58,6 @@
   "dhp248:1": "Ovako znaj, o čoveče, ",
   "dhp248:2": "teško je lošem se odupreti. ",
   "dhp248:3": "Neka te pohlepa i neznanje ",
-  "dhp248:4": "ne pobede još zadugo. "
+  "dhp248:4": "ne pobede još zadugo. ",
+  "dhp249:1": "Ljudi daju u skladu "
 }
