Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -60,5 +60,6 @@
   "dhp248:3": "Neka te pohlepa i neznanje ",
   "dhp248:4": "ne pobede još zadugo. ",
   "dhp249:1": "Ljudi daju u skladu ",
-  "dhp249:2": "sa svojom verom i predanošću. "
+  "dhp249:2": "sa svojom verom i predanošću. ",
+  "dhp249:3": "Ko god zavidi na hrani i piću "
 }
