--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -61,5 +61,6 @@
   "dhp248:4": "ne pobede još zadugo. ",
   "dhp249:1": "Ljudi daju u skladu ",
   "dhp249:2": "sa svojom verom i predanošću. ",
-  "dhp249:3": "Ko god zavidi na hrani i piću "
+  "dhp249:3": "Ko god zavidi na hrani i piću ",
+  "dhp249:4": "datim drugima, "
 }
