Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -63,5 +63,6 @@
   "dhp249:2": "sa svojom verom i predanošću. ",
   "dhp249:3": "Ko god zavidi na hrani i piću ",
   "dhp249:4": "datim drugima, ",
-  "dhp249:5": "takav ni danju ni noću "
+  "dhp249:5": "takav ni danju ni noću ",
+  "dhp249:6": "sabranost ne pronalazi. "
 }
