Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -66,5 +66,6 @@
   "dhp249:5": "takav ni danju ni noću ",
   "dhp249:6": "sabranost ne pronalazi. ",
   "dhp250:1": "A ko takvu misao utrne, ",
-  "dhp250:2": "iz korena iščupa, "
+  "dhp250:2": "iz korena iščupa, ",
+  "dhp250:3": "takav i danju i noću "
 }
