Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -68,5 +68,6 @@
   "dhp250:1": "A ko takvu misao utrne, ",
   "dhp250:2": "iz korena iščupa, ",
   "dhp250:3": "takav i danju i noću ",
-  "dhp250:4": "sabranost pronalazi. "
+  "dhp250:4": "sabranost pronalazi. ",
+  "dhp251:1": "Nema vatre kakva je pohlepa, "
 }
