--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -69,5 +69,6 @@
   "dhp250:2": "iz korena iščupa, ",
   "dhp250:3": "takav i danju i noću ",
   "dhp250:4": "sabranost pronalazi. ",
-  "dhp251:1": "Nema vatre kakva je pohlepa, "
+  "dhp251:1": "Nema vatre kakva je pohlepa, ",
+  "dhp251:2": "ni zla poput mržnje; "
 }
