--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -70,5 +70,6 @@
   "dhp250:3": "takav i danju i noću ",
   "dhp250:4": "sabranost pronalazi. ",
   "dhp251:1": "Nema vatre kakva je pohlepa, ",
-  "dhp251:2": "ni zla poput mržnje; "
+  "dhp251:2": "ni zla poput mržnje; ",
+  "dhp251:3": "nema klopke kakva je obmana, "
 }
