Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -72,5 +72,6 @@
   "dhp251:1": "Nema vatre kakva je pohlepa, ",
   "dhp251:2": "ni zla poput mržnje; ",
   "dhp251:3": "nema klopke kakva je obmana, ",
-  "dhp251:4": "niti bujice poput žudnje. "
+  "dhp251:4": "niti bujice poput žudnje. ",
+  "dhp252:1": "Lako je tuđe greške uočiti, "
 }
