--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -73,5 +73,6 @@
   "dhp251:2": "ni zla poput mržnje; ",
   "dhp251:3": "nema klopke kakva je obmana, ",
   "dhp251:4": "niti bujice poput žudnje. ",
-  "dhp252:1": "Lako je tuđe greške uočiti, "
+  "dhp252:1": "Lako je tuđe greške uočiti, ",
+  "dhp252:2": "ali svoje zaista teško; "
 }
