--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -74,5 +74,6 @@
   "dhp251:3": "nema klopke kakva je obmana, ",
   "dhp251:4": "niti bujice poput žudnje. ",
   "dhp252:1": "Lako je tuđe greške uočiti, ",
-  "dhp252:2": "ali svoje zaista teško; "
+  "dhp252:2": "ali svoje zaista teško; ",
+  "dhp252:3": "na tuđe pokazujemo, "
 }
