Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -75,5 +75,6 @@
   "dhp251:4": "niti bujice poput žudnje. ",
   "dhp252:1": "Lako je tuđe greške uočiti, ",
   "dhp252:2": "ali svoje zaista teško; ",
-  "dhp252:3": "na tuđe pokazujemo, "
+  "dhp252:3": "na tuđe pokazujemo, ",
+  "dhp252:4": "a svoje tajimo "
 }
