Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -77,5 +77,6 @@
   "dhp252:2": "ali svoje zaista teško; ",
   "dhp252:3": "na tuđe pokazujemo, ",
   "dhp252:4": "a svoje tajimo ",
-  "dhp252:5": "k’o kockar "
+  "dhp252:5": "k’o kockar ",
+  "dhp252:6": "loše karte. "
 }
