Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -78,5 +78,6 @@
   "dhp252:3": "na tuđe pokazujemo, ",
   "dhp252:4": "a svoje tajimo ",
   "dhp252:5": "k’o kockar ",
-  "dhp252:6": "loše karte. "
+  "dhp252:6": "loše karte. ",
+  "dhp253:1": "Ko vreba samo greške drugih, "
 }
