Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -79,5 +79,6 @@
   "dhp252:4": "a svoje tajimo ",
   "dhp252:5": "k’o kockar ",
   "dhp252:6": "loše karte. ",
-  "dhp253:1": "Ko vreba samo greške drugih, "
+  "dhp253:1": "Ko vreba samo greške drugih, ",
+  "dhp253:2": "stalno se na njih žali, "
 }
