Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -80,5 +80,6 @@
   "dhp252:5": "k’o kockar ",
   "dhp252:6": "loše karte. ",
   "dhp253:1": "Ko vreba samo greške drugih, ",
-  "dhp253:2": "stalno se na njih žali, "
+  "dhp253:2": "stalno se na njih žali, ",
+  "dhp253:3": "u njemu je otrova sve više, "
 }
