Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -82,5 +82,6 @@
   "dhp253:1": "Ko vreba samo greške drugih, ",
   "dhp253:2": "stalno se na njih žali, ",
   "dhp253:3": "u njemu je otrova sve više, ",
-  "dhp253:4": "a pročišćenje sve dalje. "
+  "dhp253:4": "a pročišćenje sve dalje. ",
+  "dhp254:1": "Po nebu tragova nema, "
 }
