--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -83,5 +83,6 @@
   "dhp253:2": "stalno se na njih žali, ",
   "dhp253:3": "u njemu je otrova sve više, ",
   "dhp253:4": "a pročišćenje sve dalje. ",
-  "dhp254:1": "Po nebu tragova nema, "
+  "dhp254:1": "Po nebu tragova nema, ",
+  "dhp254:2": "niti askete izvan ovog učenja; "
 }
