--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -86,5 +86,6 @@
   "dhp254:1": "Po nebu tragova nema, ",
   "dhp254:2": "niti askete izvan ovog učenja; ",
   "dhp254:3": "puk se ushićuje maštarijama, ",
-  "dhp254:4": "u Tathāgati njih nema. "
+  "dhp254:4": "u Tathāgati njih nema. ",
+  "dhp255:1": "Po nebu tragova nema, "
 }
