--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -88,5 +88,6 @@
   "dhp254:3": "puk se ushićuje maštarijama, ",
   "dhp254:4": "u Tathāgati njih nema. ",
   "dhp255:1": "Po nebu tragova nema, ",
-  "dhp255:2": "niti askete izvan ovog učenja; "
+  "dhp255:2": "niti askete izvan ovog učenja; ",
+  "dhp255:3": "uslovljenih a večnih stvari nema, "
 }
