Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp235-255_translation-sr-brankokovacevic.json
@@ -89,5 +89,6 @@
   "dhp254:4": "u Tathāgati njih nema. ",
   "dhp255:1": "Po nebu tragova nema, ",
   "dhp255:2": "niti askete izvan ovog učenja; ",
-  "dhp255:3": "uslovljenih a večnih stvari nema, "
+  "dhp255:3": "uslovljenih a večnih stvari nema, ",
+  "dhp255:4": "ali ni u Budnima kolebanja. "
 }
