--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -1,4 +1,5 @@
 {
   "dhp256:0.1": "Kratka zbirka Budnih govora ",
-  "dhp256:0.2": "Reči mudrosti "
+  "dhp256:0.2": "Reči mudrosti ",
+  "dhp256:0.3": "Pravednik "
 }
