Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -2,5 +2,6 @@
   "dhp256:0.1": "Kratka zbirka Budnih govora ",
   "dhp256:0.2": "Reči mudrosti ",
   "dhp256:0.3": "Pravednik ",
-  "dhp256:1": "Nije neko pravednik "
+  "dhp256:1": "Nije neko pravednik ",
+  "dhp256:2": "zato što prebrzo o dobru sudi. "
 }
