Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp256-272_translation-sr-brankokovacevic.json
@@ -7,5 +7,6 @@
   "dhp256:3": "Kad mudar čovek ",
   "dhp256:4": "dobro i zlo pažljivo odvagne, ",
   "dhp257:1": "proceni druge bez žurbe, ",
-  "dhp257:2": "pravedno i bez naklonosti, "
+  "dhp257:2": "pravedno i bez naklonosti, ",
+  "dhp257:3": "tek takvog mudraca, čuvara zakona, "
 }
